# libthetacontrol

./: CMakeLists.txt  README.md
src/: ptp-helpers.cpp  ptp-helpers.hpp  thetacontrol.cpp  thetacontrol.hpp
src/examples/: readbatteryraw.cpp  switchtolivestream.cpp
